syntax = "proto3";
option java_multiple_files = true;
package com.akvelon.cakesassortmentproto;

message AddCakeRequest {
    string name = 1;
    int32 price = 2;
    int32 cookingTime = 3;
}

message AddCakeResponse {
    enum EnumAddCakeStatus {
        OK = 0;
        CAKE_ALREADY_EXIST = 1;
        INVALID_PARAMS = 2;
        UNKNOWN_ERROR = 3;
    }

    EnumAddCakeStatus status = 1;
}

message RemoveCakeRequest {
    string name = 1;
}

message RemoveCakeResponse {
    enum EnumRemoveCakeStatus {
        OK = 0;
        CAKE_NOT_FOUND = 1;
        INVALID_PARAMS = 2;
        UNKNOWN_ERROR = 3;
    }

    EnumRemoveCakeStatus status = 1;
}

message GetCakeRequest {
    string name = 1;
}

message GetCakeResponse {
    enum EnumGetCakeStatus {
        OK = 0;
        CAKE_NOT_FOUND = 1;
        INVALID_PARAMS = 2;
        UNKNOWN_ERROR = 3;
    }

    int32 id = 1;
    string name = 2;
    int32 price = 3;
    int32 cookingTime = 4;
    EnumGetCakeStatus status = 5;
}

service CakesAssortmentService {
    rpc addCake (AddCakeRequest) returns (AddCakeResponse);
    rpc removeCake (RemoveCakeRequest) returns (RemoveCakeResponse);
    rpc getCake (GetCakeRequest) returns (GetCakeResponse);
}